oauth2-proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
      - args:
        - --provider=oidc
        - --email-domain=*
        - --upstream=file:///dev/null
        - --http-address=0.0.0.0:4180
        - --skip-provider-button=true
        - --redirect-url=http://test.alx.com/oauth2/callback
        - --oidc-issuer-url=https://hudea.okta.com/oauth2/default
        - --cookie-domain=.alx.com
        - --cookie-secure=false
        - --auth-logging=true
        - --request-logging=true
        - --standard-logging=true
        - --cookie-refresh=360s
        - --pass-access-token=true
        - --reverse-proxy=true
        - --set-xauthrequest=true
        - --scope=openid email profile offline_access
        - --pass-basic-auth=true
        - --pass-user-headers=true
        - --set-authorization-header=true
        - --skip-auth-preflight=true
        - --validate-url=https://hudea.okta.com/oauth2/default/v1/introspect
        - --whitelist-domain=.alx.com
        image: quay.io/oauth2-proxy/oauth2-proxy:latest
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP

---
