hi-alx-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: hello-alx
  labels:
    app: hello-alx
spec:
  type: NodePort
  ports:
  - protocol: TCP
    name: http
    port: 8080
    targetPort: 8080
  selector:
    app: hello-alx

---
