hi-alx-ing2.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-alx2
  annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/auth-response-headers: Authorization
     nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy.kube-system.svc.cluster.local:4180/oauth2/auth
     nginx.ingress.kubernetes.io/auth-signin: http://test.alx.com/oauth2/start?rd=$escaped_request_uri
     nginx.ingress.kubernetes.io/configuration-snippet: |
       auth_request_set $token  $upstream_http_x_auth_request_access_token;
       proxy_set_header X-Access-Token $token;

       auth_request_set $token $upstream_http_authorization;
       proxy_set_header Authorization $token;

       auth_request_set $name_upstream_1 $upstream_cookie__oauth2_proxy_1;

       access_by_lua_block {
         if ngx.var.name_upstream_1 ~= "" then
           ngx.header["Set-Cookie"] = "_oauth2_proxy_1=" ..  ngx.var.name_upstream_1 .. ngx.var.auth_cookie:match("(; .*)")
         end
       }
spec:
  rules:
  - host: test.alx.com
    http:
      paths:
      - path: /hello2
        backend:
          serviceName: hello-alx2
          servicePort: 8080
